fix input-number min max prop && breadcrumb align (#514)
* fix align

* fix input number min max

--- a/packages/theme-default/src/breadcrumb.css
+++ b/packages/theme-default/src/breadcrumb.css
@@ -5,6 +5,7 @@
 
   @b breadcrumb {
     font-size:13px;
+    line-height: 1;
     @utils-clearfix;
 
     @e separator {
